--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-<link rel="manifest" href="site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/4b3962bf0e.js" crossorigin="anonymous"></script>
@@ -48,7 +48,8 @@
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane"
-                    type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false"><a href="profile.html"> Profile
+                    type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false"><a
+                        href="profile.html"> Profile
                     </a></button>
             </li>
             <li class="nav-item" role="presentation">
@@ -66,16 +67,16 @@
 
 
         <!-- <div id="mySidebar" class="sidebar"> -->
-            <!-- <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
+        <!-- <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
 
             <a href="profile.html">About</a>
             <a href="#">Services</a>
             <a href="#">Clients</a>
             <a href="contact.html">Contact</a>
         </div> -->
-        <button class="openbtn">☰</button>
+        <!-- <button class="openbtn">☰</button> -->
     </div>
-    
+
 
     <div>
 
@@ -100,17 +101,128 @@
 
     <div class="hero-image">
         <div class="hero-text">
-            <h1 style="font-size:50px">I am Nwuko Onyedikachi</h1>
+            <h1 style="font-size:50px" id="nwuko">I am Nwuko Onyedikachi</h1>
             <p>And I'm a Web Developer</p>
-           <a href="https://wa.me/8129707530"> <button>Hire me</button></a>
+            <a href="https://wa.me/8129707530"> <button>Hire me</button></a>
+        </div>
+    </div>
+    <div class="mother-house">
+
+        <h1 class="skill">skills</h1>
+
+        <div class="house">
+            <div data-aos="flip-up">
+
+                <div class="responsive">
+                    <div class="gallery" id="js">
+                        <a target="_blank" href="img/html.jfif">
+                            <img id="skill-img" src="img/html.jfif" alt="Northern Lights" width="600" height="600">
+                        </a>
+                        <div class="desc">HTML<br>
+                            <br>Hyper Text Mark-Up Language</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div data-aos="fade-right" data-aos-delay="600">
+                <div class="responsive" id="boostrap">
+                    <div class="gallery">
+                        <a target="_blank" href="img/css.png">
+                            <img id="skill-img" src="img/css.png" alt="Northern Lights" width="600" height="600">
+                        </a>
+                        <div class="desc">CSS<br>
+                            <br>Casscading Stylesheets</a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="clearfix"></div>
+
+            </div>
+        </div>
+
+
+
+
+
+
+        <div class="house">
+            <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+                <div class="responsive">
+                    <div class="gallery" id="js">
+                        <a target="_blank" href="img/js.png">
+                            <img id="skill-img" src="img/js.png" alt="Northern Lights" width="600" height="600">
+                        </a>
+                        <div class="desc">JAVASCRIPT <br>
+                            <br>Javascript Programming Language</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+
+                <div data-aos="fade-left">
+                    <div class="responsive" id="boostrap">
+                        <div class="gallery">
+                            <a target="_blank" href="img/download.jpg">
+                                <img id="skill-img" src="img/download.jpg" alt="Northern Lights" width="600"
+                                    height="600">
+                            </a>
+                            <div class="desc">BOOSTRAPP<br>
+                                <br>Javascript Programming Language</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="clearfix"></div>
+
+
+        </div>
+
+
+        <div class="house">
+            <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+                <div class="responsive">
+                    <div class="gallery" id="js">
+                        <a target="_blank" href="img/react.png">
+                            <img id="skill-img" src="img/react.png" alt="Northern Lights" width="600" height="600">
+                        </a>
+                        <div class="desc">REACT.JS <br>
+                            <br>React Open Source Library</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+
+                <div data-aos="fade-left">
+                    <div class="responsive" id="boostrap">
+                        <div class="gallery">
+                            <a target="_blank" href="img/tw.png">
+                                <img id="skill-img" src="img/tw.png" alt="Northern Lights" width="600"
+                                    height="600">
+                            </a>
+                            <div class="desc">TAILWIND CSS<br>
+                                <br>Tailwind Framework</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="clearfix"></div>
+
+
         </div>
     </div>
 
-
-
-
-
-    <h1 class="skill">skills</h1>
 
 
     <div class="mother-responsive">
@@ -119,7 +231,7 @@
             <div class="responsive">
                 <div class="gallery">
                     <a target="_blank" href="img/html.jfif">
-                        <img id="skill-img" src="img/html.jfif" alt="Cinque Terre" width="600" height="600">
+                        <img id="skill-img" src="img/html.jfif" alt="Cinque Terre" width="700" height="700">
                     </a>
                     <div class="desc"> HTML <br>
                         <br>Hyper Text Mark Up Language
@@ -176,6 +288,7 @@
 
 
 
+    </div>
 
 
 
@@ -196,9 +309,7 @@
 
 
 
-
-        <div class="papa-responsive">
-
+    <div class="papa-responsive">
 
 
 
@@ -210,29 +321,31 @@
 
 
 
-            <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
-                id="about">
-                <h1 class="dbase">Dbase</h1>
-                We are a fast growing company and,we are here to help you develop more out without the stress of knowing
-                coding .
-                our logo has been withstanding since 2012.and we've employed more than 2000+ employers
-            </div>
 
-
+        <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" id="about">
+            <h1 class="dbase">Dbase</h1>
+            We are a fast growing company and,we are here to help you develop more out without the stress of knowing
+            coding .
+            our logo has been withstanding since 2012.and we've employed more than 2000+ employers
         </div>
 
 
+    </div>
 
 
+
+    <div data-aos="flip-right">
         <h1 class="skill">catalogue</h1>
+    </div>
 
-
-
+<div class="mother-house2">
+    <div class="house2">
+    <div data-aos="fade-down-right">
 
         <div class="responsive">
 
 
-            <div class="gallery">
+            <div class="gallery2">
                 <a target="_blank" href="img/result.jpg">
                     <img src="img/result.jpg" alt="Cinque Terre" width="600" height="400">
                 </a>
@@ -240,114 +353,118 @@
                         <br>.io/result/</a></div>
             </div>
         </div>
+    </div>
 
 
-        <div class="responsive">
-            <div class="gallery">
-                <a target="_blank" href="img/login.jpg">
-                    <img src="img/login.jpg" alt="Forest" width="600" height="400">
-                </a>
-                <div class="desc"><a href="https://krisdikachi.github.io/shopify">https://krisdikachi.github
-                        <br>.io/shopify</a></div>
-            </div>
+    <div class="responsive">
+        <div class="gallery2">
+            <a target="_blank" href="img/login.jpg">
+                <img src="img/login.jpg" alt="Forest" width="600" height="400">
+            </a>
+            <div class="desc"><a href="https://krisdikachi.github.io/shopify">https://krisdikachi.github
+                    <br>.io/shopify</a></div>
         </div>
+    </div>
 
-        <div class="responsive">
-            <div class="gallery">
-                <a target="_blank" href="img/coinbase.jpg">
-                    <img src="img/coinbase.jpg" alt="Northern Lights" width="600" height="400">
-                </a>
-                <div class="desc"><a href="https://krisdikachi.github.io/my-cloned-coinbase">https://krisdikachi.github
-                        <br>.io/my-cloned-coinbase</a></div>
-            </div>
+</div>
+
+<div class="house2">
+    <div class="responsive">
+        <div class="gallery2">
+            <a target="_blank" href="img/coinbase.jpg">
+                <img src="img/coinbase.jpg" alt="Northern Lights" width="600" height="400">
+            </a>
+            <div class="desc"><a href="https://krisdikachi.github.io/my-cloned-coinbase">https://krisdikachi.github
+                    <br>.io/my-cloned-coinbase</a></div>
         </div>
+    </div>
 
-        <div class="responsive">
-            <div class="gallery">
-                <a target="_blank" href="img/nass.jpg">
-                    <img src="img/nass.jpg" alt="Mountains" width="600" height="400">
-                </a>
-                <div class="desc"><a href="https://krisdikachi.github.io/national-assembly/">https://krisdikachi.github
-                        <br>.io/national-assembly/</a></div>
-            </div>
+    <div class="responsive">
+        <div class="gallery2">
+            <a target="_blank" href="img/nass.jpg">
+                <img src="img/nass.jpg" alt="Mountains" width="600" height="400">
+            </a>
+            <div class="desc"><a href="https://krisdikachi.github.io/national-assembly/">https://krisdikachi.github
+                    <br>.io/national-assembly/</a></div>
         </div>
+    </div>
 
-        <div class="clearfix"></div>
+    <div class="clearfix"></div>
 
-
-
-
-
-
-        <div class="mother-employed">
-            <div class="employed">
-                <i class="fa fa-user-plus" aria-hidden="true" id="user"></i>
-                <br><br>
-                <h3 class="employed-text">employed
-                    <br>
-                    100+
-                </h3>
-
-            </div>
-            <div class="employed2">
-                <i class="fa fa-briefcase" aria-hidden="true" id="user"></i>
-                <br><br>
-                <h3 class="employed-text">jobs executed
-                    <br>150+
-                </h3>
-            </div>
+</div>
+</div>
 
 
-            <div class="employed">
-                <i class="fa-solid fa-handshake" id="user"></i> <br><br>
-                <h3 class="employed-text">partners
-                    <br>
-                    30+
-                </h3>
 
-            </div>
+    <div class="mother-employed">
+        <div class="employed">
+            <i class="fa fa-user-plus" aria-hidden="true" id="user"></i>
+            <br><br>
+            <h3 class="employed-text">employed
+                <br>
+                100+
+            </h3>
 
-            <div class="employed2">
-                <i class="fa-solid fa-face-smile" id="user"></i>
-                <br><br>
-                <h3 class="employed-text">happy clients
-                    <br>100+
-                </h3>
-            </div>
+        </div>
+        <div class="employed2">
+            <i class="fa fa-briefcase" aria-hidden="true" id="user"></i>
+            <br><br>
+            <h3 class="employed-text">jobs executed
+                <br>150+
+            </h3>
         </div>
 
 
-
-
-
-
-        <div class="slideshow-container">
-
-            <div class="mySlides">
-                <q>I love you the more in that I believe you had liked me for my own sake and for nothing else</q>
-                <p class="author">- John Keats</p>
-            </div>
-
-            <div class="mySlides">
-                <q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
-                <p class="author">- Ernest Hemingway</p>
-            </div>
-
-            <div class="mySlides">
-                <q>I have not failed. I've just found 10,000 ways that won't work.</q>
-                <p class="author">- Thomas A. Edison</p>
-            </div>
-
-            <a class="prev" onclick="plusSlides(-1)">❮</a>
-            <a class="next" onclick="plusSlides(1)">❯</a>
+        <div class="employed3">
+            <i class="fa-solid fa-handshake" id="user"></i> <br><br>
+            <h3 class="employed-text">partners
+                <br>
+                30+
+            </h3>
 
         </div>
 
-        <div class="dot-container">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
+        <div class="employed4">
+            <i class="fa-solid fa-face-smile" id="user"></i>
+            <br><br>
+            <h3 class="employed-text">happy clients
+                <br>100+
+            </h3>
         </div>
+    </div>
+
+
+
+
+
+
+    <div class="slideshow-container">
+
+        <div class="mySlides">
+            <q>I love you the more in that I believe you had liked me for my own sake and for nothing else</q>
+            <p class="author">- John Keats</p>
+        </div>
+
+        <div class="mySlides">
+            <q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
+            <p class="author">- Ernest Hemingway</p>
+        </div>
+
+        <div class="mySlides">
+            <q>I have not failed. I've just found 10,000 ways that won't work.</q>
+            <p class="author">- Thomas A. Edison</p>
+        </div>
+
+        <a class="prev" onclick="plusSlides(-1)">❮</a>
+        <a class="next" onclick="plusSlides(1)">❯</a>
+
+    </div>
+
+    <div class="dot-container">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
 
     </div>
 
@@ -404,11 +521,14 @@
 
 
 
+
+
+
+
+
+
     </footer>
     <div class="copy">@ copywright &copy dbase associates</div>
-
-
-
 
 
 
@@ -424,7 +544,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
-   
+
 
 
 </body>
