--- a/service.html
+++ b/service.html
@@ -61,7 +61,7 @@
 
         <button type="button" class="btn btn-outline-warning" id="contact"><a href="contact.html"> contact </a></button>
 
-        <button type="button"  id="liveToastBtn" class="openbtn">☰</button>
+        <!-- <button type="button"  id="liveToastBtn" class="openbtn">☰</button> -->
         
 
     </div>
